# sql2mermaid

./: .gitignore  README.md  pyproject.toml  pyscript.json  requirements.txt  sql2mermaid-0.0.1-py2.py3-none-any.whl  sql2mermaid.py  sqltomermaid.py
.github/workflows/: website.yml
pyscript/: generate_graph.py  index.css  index.html  pyscript.json
sql2mermaid/: __init__.py  __main__.py  cli.py  sql2mermaid.py
